# src/shared/api/openapi.json
@@ -630,7 +630,7 @@
       "Cart": {
         "type": "object",
         "properties": {
-          "cartItems": {
+          "cartLines": {
             "type": "array",
             "items": {
               "type": "object",
@@ -658,7 +658,7 @@
           }
         },
         "required": [
-          "cartItems",
+          "cartLines",
           "deliveryPrice",
           "version"
         ]
